--- a/package.json
+++ b/package.json
@@ -35,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "jest": {
+  "transformIgnorePatterns": [
+    "/node_modules/(?!axios)/"
+  ]
+}
+
 }
