--- a/.ebextensions/00-nginx.config
+++ b/.ebextensions/00-nginx.config
@@ -1,3 +1,3 @@
 option_settings:
-  aws:elasticbeanstalk:container:docker:
-    Port: 8080
+  aws:elasticbeanstalk:application:environment:
+    PORT: "8080"
